--- a/Desktop.css
+++ b/Desktop.css
@@ -11,11 +11,16 @@
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
 
-.nav-log{
+.nav-logo{
     text-align: center;
 }
+.nav-logo img{
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+}
 .nav-heading h1{
-    margin-top: 60px;
+    margin: 3rem;
 }
 .nav-menu{
     flex-direction: row;
@@ -24,7 +29,7 @@
 .nav-menu a{
     background-color: transparent;
     padding: 10px;
-    margin-top: 60px;
+    margin-top: 17%;
 }
 .profile .top-weather-icon{
     position: absolute;
@@ -48,7 +53,7 @@
 }
 .profile-des p{
     margin-top: 10px;
-    width: 50%;
+    width: 70%;
 }
 /* About me section design start here  */
 
