--- a/style.css
+++ b/style.css
@@ -12,16 +12,16 @@
 }
 /* navbar design start */
 .nav-logo img{
-    padding: 20px;
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;
+    padding: 0px;
+    width: 30%;
+    height: 30%;
+    border-radius: 50px;
 }
 .navbar{
     text-align: center;
     background-color: #0c6168;
     /* padding: 1% 20%; */
-    padding: 5px 20px;
+    padding: 1px 1px;
 }
 p{
     font-size: 1.2rem;
@@ -69,7 +69,7 @@ h2{
     padding: 10px;
 }
 .nav-menu a:hover{
-    background-color: gray;
+    background-color: #90e7ec;
     box-shadow: 0px 4px 8px 5px black;
 }
 /* navbar design end */
@@ -157,7 +157,7 @@ h2{
     padding: 20px;
     cursor: pointer;
     text-align: center;
-    margin 10px;
+    margin: 10px;
 }
 .cv-button:hover{
     box-shadow: 0px 4px 8px 5px white;
